# interrupting-cow

./: README.md  __init__.py  asmb.py  complete.py  dg.py  pyproject.toml  whisperrt.py
speech_rec/: whisperrt.py
